--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,19 @@
     <string name="GroupLoaded">GroupLoaded</string>
     <string name="week1_adapter_name">week1</string>
     <string name="week2_adapter_name">week2</string>
+    <string-array name="week_selection">
+        <item>Тиждень 1</item>
+        <item> Тиждень 2</item>
+    </string-array>
+    <string name="notifications_title">Нотифікації</string>
+    <string name="choose_week_title">Виберіть поточний тиждень</string>
+    <string name="current_week">Поточний тиждень</string>
+    <string name="key_current_week">key_current_week</string>
+    <string name="key_notifications">key_notifications</string>
+    <string name="main_settings">Основні налаштування</string>
+    <string name="go_to_market">Перейти на сторінку в плеймаркеті</string>
+    <string name="url_to_playstore">market://details?id=com.knu.krasn.knuscheduler</string>
+    <string name="notifications_enabled">Нотифікації ввімкнено</string>
+    <string name="notifications_disabled">Нотифікації вимкнено</string>
+    <string name="key_go_to_market">key_go_to_market</string>
 </resources>
