Added new functionality, started MVP pattern implementation. Big update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="key_get_group">getGroup</string>
 
     <string name="are_you_sure">Ви впевнені?</string>
+    <string name="thats_all">\"Це всі результати\"</string>
 </resources>
