--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -53,4 +53,5 @@
     <string name="press_again">Натисніть знову для виходу</string>
     <string name="lesson_number_time">Пара %1$d (%2$s - %3$s)</string>
     <string name="room_corps_number"> %1$s ауд. корпус %2$s</string>
+    <string name="no_data_available">Немає пар</string>
 </resources>
