--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="no_data_available">Немає пар</string>
     <string name="faculty_title">Виберіть факультет</string>
     <string name="cant_connect">Невдалося підключитись до сервера</string>
+    <string name="text_monday">понедельник</string>
 </resources>
