--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,13 +6,14 @@
     <string name="Day4">Четвер\n %1$d пари</string>
     <string name="Day5">П\'ятниця\n %1$d пари</string>
     <string name="Day6">Субота\n %1$d пари</string>
-    <string name="Monday">Понеділок</string>
-    <string name="Tuesday">Вівторок</string>
-    <string name="Wednesday">Середа</string>
-    <string name="Thursday">Четвер</string>
-    <string name="Friday">П\'ятниця</string>
-    <string name="Saturday">Субота</string>
+    <string name="Monday">ПH</string>
+    <string name="Tuesday">ВТ</string>
+    <string name="Wednesday">СР</string>
+    <string name="Thursday">ЧТ</string>
+    <string name="Friday">ПТ</string>
+    <string name="Saturday">СБ</string>
     <string name="Reload">Reload</string>
+    <string name="lesson_count">%1$d пари</string>
     <string name="current_group">GroupLoaded</string>
     <string name="week1_adapter_name">week1</string>
     <string name="week2_adapter_name">week2</string>
@@ -55,5 +56,4 @@
     <string name="no_data_available">Немає пар</string>
     <string name="faculty_title">Виберіть факультет</string>
     <string name="cant_connect">Невдалося підключитись до сервера</string>
-    <string name="text_monday">понедельник</string>
 </resources>
