--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -55,4 +55,5 @@
   <string name="no_data_available">Нет пар</string>
   <string name="faculty_title">Выберите факультет</string>
   <string name="cant_connect">Не получилось загрузить данные</string>
+  <string name="lesson">Пары</string>
 </resources>
