--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -57,4 +57,5 @@
   <string name="no_data_available">Немає пар</string>
   <string name="faculty_title">Виберіть факультет</string>
   <string name="cant_connect">Невдалося завантажити даннi</string>
+  <string name="lesson">Пари</string>
 </resources>
