--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
   <string name="no_data_available">Немає пар</string>
   <string name="faculty_title">Виберіть факультет</string>
   <string name="cant_connect">Невдалося підключитись до сервера</string>
+  <string name="lesson">Пари</string>
 </resources>
